<resources>
    <string name="app_name">Life\'s Hard</string>
    <string name="life_is_hard_let_us_help">Life is hard, let us help.</string>
    <string name="where_should_i_eat">Where should I eat?</string>
    <string name="should_i_skip_school_work_today">Should I study today?</string>
    <string name="what_should_i_watch_on_netflix">What should I watch on Netflix?</string>
    <string name="button_send">Send Message</string>
    <string name="movenet2">Move Net 2</string>
    <string name="TVSeries">TV Series</string>
    <string name="tvseriesormovie">TV Series or Movie?</string>
    <string name="movie">Movie</string>
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="horror">Horror</string>
    <string name="which_genre_would_you_like">Which genre would you like?</string>
    <string name="top_3_recommended_action_movies">Top 3 Recommended Action Movies</string>
    <string name="v_for_vendetta">V for Vendetta</string>
    <string name="triple_frontier">Triple Frontier</string>
    <string name="the_matrix">The Matrix</string>
    <string name="onClick">sendMessage</string>
    <string name="docu_series">Docu-Series</string>
    <string name="sci_fi">Science Fiction</string>
    <string name="docuseries">Docuseries</string>
    <string name="where_should_i_vacation">Where should I vacation?</string>
    <string name="step_brothers">Step Brothers</string>
    <string name="between_two_ferns_the_movie">Between Two Ferns: The Movie</string>
    <string name="harold_kumar_escape_from_guantanamo_bay"><![CDATA[Harold & Kumar Escape From Guantanamo Bay]]></string>
    <string name="top_3_recommended_documentaries">Top 3 Recommended Documentaries</string>
    <string name="american_factory">American Factory</string>
    <string name="top_3_recommended_comedies">Top 3 Recommended Comedies</string>
    <string name="fyre">FYRE</string>
    <string name="the_great_hack">The Great Hack</string>
    <string name="top_3_recommended_dramas">Top 3 Recommended Dramas</string>
    <string name="room">ROOM</string>
    <string name="ex_machina">Ex Machina</string>
    <string name="theory_of_everything">The Theory of Everything</string>
    <string name="top_3_recommended_horror_movies">Top 3 Recommended Horror Movies</string>
    <string name="hush">HUSH</string>
    <string name="wouldrather">Would You Rather</string>
    <string name="creep">Creep</string>
    <string name="top_3_recommended_action_tv_series">Top 3 Recommended Action TV Series</string>
    <string name="narcos">Narcos</string>
    <string name="daredevil">Daredevil</string>
    <string name="the_umbrella_academy">The Umbrella Academy</string>
    <string name="which_type_of_cuisine">Which type of cuisine?</string>
    <string name="fast_food">Fast Food</string>
    <string name="chinese">Chinese</string>
    <string name="italian">Italian</string>
    <string name="american_contemporary">American Contemporary</string>
    <string name="mexican">Mexican</string>
    <string name="top_3_recommended_comedy_tv_series">Top 3 Recommended Comedy TV Series</string>
    <string name="arrested_development">Arrested Development</string>
    <string name="big_mouth">Big Mouth</string>
    <string name="the_good_place">The Good Place</string>
    <string name="top_3_recommended_docuseries">Top 3 Recommended Docuseries</string>
    <string name="mindhunter">Mindhunter</string>
    <string name="the_2000s">The 2000s</string>
    <string name="last_chance_u">Last Chance U</string>
    <string name="top_3_drama_tv_series">Top 3 Drama TV Series</string>
    <string name="blackmirror">Black Mirror</string>
    <string name="breaking_bad">Breaking Bad</string>
    <string name="stranger_things">Stranger Things</string>
    <string name="top_3_recommended_sci_fi_tv_series">Top 3 Recommended Sci-Fi TV Series</string>
    <string name="the_oa">The OA</string>
    <string name="futurama">Futurama</string>
    <string name="_13_reasons_why">13 Reasons Why</string>
    <string name="top_3_fast_food_options">Top 3 Fast Food Options</string>
    <string name="mcdonald_s">McDonald\'s</string>
    <string name="in_n_out">In-n-Out</string>
    <string name="chick_fil_a">Chick-fil-A</string>
    <string name="top_3_chinese_options">Top 3 Chinese Options</string>
    <string name="china_chili">China Chili</string>
    <string name="liyuen">Liyuen</string>
    <string name="new_garden">New Garden</string>
    <string name="top_3_italian_options">Top 3 Italian Options</string>
    <string name="adela_s">Adela\'s</string>
    <string name="cibo">Cibo</string>
    <string name="pubblico">Pubblico</string>
    <string name="poppy">Poppy</string>
    <string name="top_3_american_contemp_options">Top 3 American Contemp. Options</string>
    <string name="st_francis_restaurant">St. Francis Restaurant</string>
    <string name="nookkitchen">Nook Kitchen</string>
    <string name="top_3_mexican_options">Top 3 Mexican Options</string>
    <string name="cocina_madrigal">Cocina Madrigal</string>
    <string name="la_santisima">La Santisima</string>
    <string name="taco_boys">Taco Boy\'s</string>
    <string name="spend">How much are you looking to spend?</string>
    <string name="cheap">$</string>
    <string name="decent">$$</string>
    <string name="expensive">$$$</string>
    <string name="go_on_a_staycation">Go on a Staycation</string>
    <string name="travel_nationally">Travel Nationally</string>
    <string name="travel_internationally">Travel Internationally</string>
    <string name="explore_your_city_pick_a_direction_and_drive">Explore your city- Pick a direction and drive</string>
    <string name="go_to_the_fanciest_restaurant_in_your_city">Go to the fanciest restaurant in your city</string>
    <string name="stay_at_a_nearby_hotel">Stay at a nearby hotel</string>
</resources>
