<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/which_genre_would_you_like"
            android:textColor="#000000"
            android:textSize="20sp"
            app:fontFamily="@font/montserrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/action"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/ingloriousactioncrop"
            android:gravity="center"
            android:hapticFeedbackEnabled="true"
            android:onClick="sendMessage"
            android:text="@string/action"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:fontFamily="@font/montserrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <Button
            android:id="@+id/comedy"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/comedybutton"
            android:gravity="center"
            android:hapticFeedbackEnabled="true"
            android:onClick="sendMessage2"
            android:text="@string/comedy"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:fontFamily="@font/montserrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action" />

        <Button
            android:id="@+id/documentary"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/tedbundydoc"
            android:gravity="center"
            android:hapticFeedbackEnabled="true"
            android:onClick="sendMessage3"
            android:text="@string/documentary"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:fontFamily="@font/montserrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comedy" />

        <Button
            android:id="@+id/drama"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/dramaroma"
            android:gravity="center"
            android:hapticFeedbackEnabled="true"
            android:onClick="sendMessage4"
            android:text="@string/drama"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:fontFamily="@font/montserrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/documentary" />

        <Button
            android:id="@+id/horror"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/hushhorror"
            android:gravity="center"
            android:onClick="sendMessage5"
            android:hapticFeedbackEnabled="true"
            android:text="@string/horror"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:fontFamily="@font/montserrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drama" />

    </LinearLayout>
</ScrollView>