<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/tvseriesormovie"
            android:textColor="#000000"
            android:textSize="20sp"
            app:fontFamily="@font/montserrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
        android:id="@+id/tvseries"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:onClick="sendMessage2"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/netflixtvseries"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:text="@string/TVSeries"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
            app:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/movie"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:onClick="sendMessage"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/netflixfirst"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:text="@string/movie"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvseries" />

    </LinearLayout>
</ScrollView>